# economist-reader

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml
.github/workflows/: hourly.yml
.wrangler/cache/: wrangler-account.json
src/econ/: ai.py  pdf.py  pipeline.py  r2.py  scraper.py  state.py
