[project]
name = "economist-reader"
version = "0.1.0"
description = "Hourly cron pipeline: scrape The Economist → translate via Gemma 3 → bilingual PDF → Cloudflare R2"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "reportlab>=4.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/econ"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
